fixed spacing

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 .main__profile {
-    margin-bottom: 20px;
+    margin-bottom: -8px;
 }
 
 .main__picture {
